--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,6 +16,12 @@ env:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+    - run: |
+        echo ${{ env.DOTNET_VERSION }}
+        
   # This workflow contains a single job called "build"
   call-workflow-passing-data:
     uses: colindembovsky/actions-sandbox/.github/workflows/build.yml@main
